--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "polymer": "Polymer/polymer#^1.4.0",
     "paper-tooltip": "PolymerElements/paper-tooltip#^1.1.4",
-    "iron-icon": "PolymerElements/iron-icon#^1.0.13"
+    "iron-icon": "PolymerElements/iron-icon#^1.0.13",
+    "iron-icons": "PolymerElements/iron-icons#^1.2.1"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
